--- a/client/src/home/BannerCard.css
+++ b/client/src/home/BannerCard.css
@@ -10,7 +10,8 @@
   border-radius: 18px;
   font-size: 22px;
   font-weight: bold;
-  color: #fff;
+  z-index: 10;
+  /*color: #fff;*/
 }
   
   .swiper-slide {
@@ -20,7 +21,7 @@
     border-radius: 18px;
     font-size: 22px;
     font-weight: bold;
-    color: #fff;
+    /*color: #fff;*/
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
